# articles_api

./: Cargo.toml  diesel.toml
migrations/2024-08-23-045941_create_user/: up.sql
migrations/2024-08-23-071317_create_articles/: up.sql
src/: db_models.rs  db_utils.rs  main.rs  schema.rs  services.rs
src/routes/: article.rs  user.rs
