[package]
name = "articles_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.86"
dotenv = "0.15.0"
chrono = { version= "0.4.38", features = ["serde"]}
